Changelog. A lot less detailed than usual, at least for past
history. 

2006/05/25: Added environment management routines.

2006/05/03: Bug fixes, plus some change in the internals for SPINS,
	    preparing hooks for insertion with local numbering.

2006/04/24: Minor changes to the interface of dense tools routines,
	    trying to achieve a uniform look & feel.
	    Rewritten documentation; it is now reasonable, though not
	    perfect, except for the preconditioner routines. 
	    We can now declare RC3. 

2006/04/21: A bunch of fixes related to various matrix initialization 
	    problems that were revealed while testing on SP5.         

2006/04/18: Changed interface to spasb and csdp: better handling of 
	    regeneration. To be tested further for sophisticated uses.

2006/03/31: We declare RC2 now. Improved I/O routines in test/Fileread.

2006/03/24: We have a complex version now, working (not necessarily bug free). 

2006/03/15: Started move to complex version.  

2006/03/01: Complete restructure of PREC section. 

2006/02/01: New naming scheme.

2006/01/01: New multilevel preconditioning wih smoothed aggregation.

2005/09   : Now enabled UMFPACK complete factorization as basis for AS. 

2005/05/04: Now enabled SuperLU complete factorization as basis for AS. 

2005/04/29: First version with decoupled 2-level.

2005/04/06: Started work on decoupling the preconditioner aggregation
	    for 2-level from the main factorization. 

2005/03/30: First version of new DSC/SP allocate/insert/assembly
	    routines.  
2005/03/17: First version of RGMRES. To be refined. 

2005/03/08: dSwapTran aligned with dSwapData. Taken out SwapOverlap.
	    also moved onto iSwapX.

2005/03/07: dSwapData rewritten to achieve: 1. better performance;
	    2. more flexible functionality. It is now possible to
	    avoid SwapOvrlap entirely, relying on just SwapData.
	    SwapTran is still alive, since it reads the descriptors in